feat: add tag search
